[tool.poetry]
name = "displaystring"
version = "0.1.0"
description = ""
authors = ["mushemukwevho@gmail.com <mushemukwevho@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
pydantic = "^1.9.1"
uvicorn = {extras = ["standard"], version = "^0.18.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
